# CppAD-oldmirror

./: AUTHORS  BatchCommit.sh  Build  Build.bsh  Build.sh  CMakeLists.txt  COPYING  ChangeCopy.bsh  ChangeCopy.sed  ChangeCopy.sh  ChangeLog  CheckIncludeDef.bsh  CheckIncludeDef.sh  CheckIncludeFile  CheckIncludeFile.bsh  CheckIncludeFile.sh  CheckIncludeOmh.bsh  CheckIncludeOmh.sh  CleanCppAD.bsh  CleanCppAD.sh  Dev.omh  Doc.omh  DosFormat.bsh  DosFormat.sh  FixAclocal.sh  FixMakefile.bsh  FixMakefile.sh  GplLicense.bsh  GplLicense.sh  Makefile.am  Makefile.in  RunOMhelp  RunOMhelp.sh  SvnCommit  SvnCommit.bsh  SvnCommit.sed  SvnCommit.sh  SvnMerge  SvnMerge.sh  SvnStatus  (+35 more)
1.0/: AUTHORS  Build  Doc.omh  Makefile.am  aclocal.m4  configure  configure.ac
2.0/: configure  configure.ac  makefile.in
2.2/: AUTHORS  configure  cppad.spec
2.3/: build.sh  configure
20060913/: Makefile.in  SvnStatus  configure  configure.ac
20071016/: build.sh  configure.ac  doc.omh  makefile.in  svn_status.sh
20071124/: build.sh  configure.ac  svn_status.sh
20071210/: build.sh  configure.ac  svn_status.sh
20080826/: AUTHORS  build.sh  configure  configure.ac  svn_status.sh
20080919/: new_release.sh
20090131/: build.sh  configure  configure.ac  new_release.sh  new_stable.sh  run_omhelp.sh  svn_status.sh
20100101/: build.sh  configure  configure.ac  doc.omh.in  makefile.in  new_release.sh  new_stable.sh  svn_status.sh
20110101/: build.sh  configure  configure.ac
Adolc/: AllocMat.cpp  AllocMat.h  AllocVec.cpp  AllocVec.h  DetLu.cpp  DetMinor.cpp  Example.cpp  Makefile.am  Makefile.in  Speed.cpp
CppAD/: CheckNumericType.h  CheckSimpleVector.h  CppAD.h  CppAD_vector.h  ErrorHandler.h  LuFactor.h  LuInvert.h  LuSolve.h  NearEqual.h  OdeErrControl.h  OdeGear.h  OdeGearControl.h  Poly.h  PowInt.h  Romberg.h  RombergMul.h  RombergOne.h  Rosen34.h  Runge45.h  SpeedTest.h  TrackNewDel.h
Doc/: __contents_htm.js  __index_htm.js  __search_xml.js  _abs.cpp_htm.js  _abs_htm.js  _abs_xml.js  _ad_htm.js  _ad_xml.js  _add_htm.js  _add_xml.js  _addeq.cpp_xml.js  _addeq_xml.js  _adfun_xml.js  _adolc_xml.js  _advalued_htm.js  _arithmetic_xml.js  _atan2_htm.js  _benderquad_htm.js  _boolfun.cpp_xml.js  _boolfun_xml.js  _boolvalued_htm.js  _boolvalued_xml.js  _bugs_htm.js  _capacity_taylor_xml.js  _checknumerictype.cpp_xml.js  _checknumerictype_xml.js  _checksimplevector.cpp_htm.js  _checksimplevector_htm.js  _checksimplevector_xml.js  _compare_htm.js  _compare_xml.js  _comparechange.cpp_htm.js  _complexpoly.cpp_xml.js  _condexp.cpp_htm.js  _condexp.cpp_xml.js  _condexp_xml.js  _constructor_xml.js  _contents.htm  _contents_xml.htm  _copyad.cpp_xml.js  (+460 more)
Example/: Abs.cpp  Acos.cpp  Add.cpp  AddEq.cpp  Asin.cpp  Atan.cpp  Atan2.cpp  BenderQuad.cpp  BoolFun.cpp  CheckNumericType.cpp  CheckSimpleVector.cpp  Compare.cpp  CompareChange.cpp  ComplexPoly.cpp  CondExp.cpp  CopyAD.cpp  CopyBase.cpp  Cos.cpp  Cosh.cpp  CppAD_vector.cpp  Default.cpp  DetByLu.cpp  DetByLu.h  DetByMinor.cpp  DetByMinor.h  DetOfMinor.cpp  DetOfMinor.h  Discrete.cpp  Div.cpp  DivEq.cpp  Eq.cpp  Erf.cpp  ErrorHandler.cpp  Example.cpp  Example.vcproj  Exp.cpp  ForJacDep.cpp  ForOne.cpp  ForSparseJac.cpp  ForTwo.cpp  (+69 more)
Fadbad/: DetLu.cpp  DetMinor.cpp  Example.cpp  Makefile.am  Speed.cpp
GetStarted/: GetStarted.cpp  Makefile.am
Introduction/: ExpAppMain.cpp  ExpApx.cpp  ExpApx.hpp  ExpApxAD.cpp  ExpApxExample.h  ExpApxFor.cpp  ExpApxRev.cpp  ExpApxSeq.cpp  ExpForExample.cpp  ExpRevExample.cpp  ExpSeqExample.cpp  ExpSeqMain.cpp  Introduction.cpp  Makefile.am  Makefile.in
PrintFor/: Makefile.am  Makefile.in  PrintFor.cpp
Speed/: DetLu.cpp  DetMinor.cpp  LuSolve.cpp  Makefile.am  Makefile.in  Ode.cpp  Speed.cpp
SpeedExample/: Makefile.am  Makefile.in  SpeedExample.cpp
TestMore/: Abs.cpp  Acos.cpp  Add.cpp  AddEq.cpp  AddZero.cpp  Asin.cpp  Atan.cpp  Atan2.cpp  Compare.cpp  CompareChange.cpp  CondExp.cpp  CondExpAD.cpp  Copy.cpp  Cos.cpp  Cosh.cpp  Div.cpp  DivEq.cpp  DivZeroOne.cpp  Erf.cpp  Exp.cpp  ForHess.cpp  ForJacDep.cpp  ForSparseJac.cpp  Forward.cpp  FromBase.cpp  Log.cpp  Log10.cpp  Makefile.am  Makefile.in  Mul.cpp  MulEq.cpp  MulZeroOne.cpp  NearEqualExt.cpp  Neg.cpp  OdeErrControl.cpp  Poly.cpp  Pow.cpp  PowInt.cpp  RevSparseHes.cpp  RevSparseJac.cpp  (+19 more)
compare_c/: det_by_minor.c  makefile.in
cppad/: allocator.hpp  base_require.hpp  check_simple_vector.hpp  config.h  configure.hpp  configure.hpp.in  memory_leak.hpp  nan.hpp  omp_alloc.hpp  rosen_34.hpp  speed_test.hpp  thread_alloc.hpp  track_new_del.hpp  vector.hpp
example/: CMakeLists.txt  abs.cpp  acos.cpp  add.cpp  add_eq.cpp  allocator.cpp  asin.cpp  atan.cpp  atan_2.cpp  base_adolc.hpp  bender_quad.cpp  checkpoint.cpp  chkpt_simple.cpp  compare.cpp  compare_change.cpp  complex_poly.cpp  cond_exp.cpp  conj_grad.cpp  copy_ad.cpp  cos.cpp  cosh.cpp  div.cpp  div_eq.cpp  eq.cpp  equal_op_seq.cpp  erf.cpp  example.cpp  example.vcproj  exp.cpp  extend_vector.cpp  for_one.cpp  for_sparse_jac.cpp  for_two.cpp  forward.cpp  forward_mul.cpp  hes_times_dir.cpp  hessian.cpp  independent.cpp  integer.cpp  jacobian.cpp  (+47 more)
ipopt/: get_started.cpp  solve.hpp  solve_callback.hpp  solve_full.hpp  solve_nlp.hpp  test.sh
ipopt_cppad/: makefile.in
ipopt_solve/: get_started.cpp  ipopt_solve.hpp  test.sh
lib/: ErrFun.cpp
local/: ad.hpp  ad_fun.hpp  ad_valued.hpp  add_op.hpp  atomic_base.hpp  base_complex.hpp  base_cond_exp.hpp  base_double.hpp  base_float.hpp  base_std_math.hpp  checkpoint.hpp  comp_op.hpp  cond_exp.hpp  declare_ad.hpp  define.hpp  discrete.hpp  discrete_op.hpp  div_op.hpp  for_jac_sweep.hpp  for_sparse_jac.hpp  forward0sweep.hpp  forward_sweep.hpp  fun_construct.hpp  hash_code.hpp  hessian.hpp  load_op.hpp  mul_op.hpp  num_skip.hpp  old_atomic.hpp  omp_max_thread.hpp  op_code.hpp  optimize.hpp  ordered.hpp  parallel_ad.hpp  player.hpp  pod_vector.hpp  pow_op.hpp  print_op.hpp  recorder.hpp  rev_hes_sweep.hpp  (+13 more)
multi_thread/: arc_tan.cpp  bthread_a11c.cpp  bthread_ad.cpp  makefile.am  makefile.in  multi_newton_time.cpp  multi_thread.cpp  openmp_a11c.cpp  test.sh  (+8 more)
(+1167 files in other folders)
